@@ -63,11 +63,13 @@ extern int powernet_snmp_ups_get_capabilities(UPSINFO *ups);
 extern int powernet_snmp_ups_read_static_data(UPSINFO *ups);
 extern int powernet_snmp_ups_read_volatile_data(UPSINFO *ups);
 extern int powernet_snmp_ups_check_state(UPSINFO *ups);
+extern int powernet_snmp_kill_ups_power(UPSINFO *ups);
 
 /* IETF */
 extern int rfc1628_snmp_ups_get_capabilities(UPSINFO *ups);
 extern int rfc1628_snmp_ups_read_static_data(UPSINFO *ups);
 extern int rfc1628_snmp_ups_read_volatile_data(UPSINFO *ups);
 extern int rfc1628_snmp_ups_check_state(UPSINFO *ups);
+extern int rfc1628_snmp_kill_ups_power(UPSINFO *ups);
 
 #endif /* _SNMP_PRIVATE_H */
